Rezize under 250px fixe - cause was overflow was not set to hidden on html

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
     left:0;
     right:0;
     box-sizing: border-box;
-    /* overflow: hidden;  */
+    overflow: hidden; 
  }
 
 
